--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chan-down"
-version = "1.0.0"
+version = "2.0.0"
 authors = ["Ivan Molina Rebolledo <ivanmolinarebolledo@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +8,4 @@ edition = "2018"
 rusutologs = { git = "https://github.com/IvanMoReau/rusutologs" }
 reqwest = "0.9.5"
 regex = "1.1.0"
+clap = { features = ["yaml"] }
